--- a/test.ipynb
+++ b/test.ipynb
@@ -211,6 +211,315 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for o in range(4, -1, -1):\n",
+    "    print(o)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['possible de vous poser quelques questions?', 'ça dure vraiment deux secondes']\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"possible de vous poser quelques questions?  ça dure vraiment deux secondes\"\n",
+    "te = text.split(\"  \")\n",
+    "print(te)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'possible de vous poser quelques questions?'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "def cleaning(text):\n",
+    "    \"\"\"This function cleans the text to remove line breaks.\"\"\"\n",
+    "    cleaned_text = re.sub(\"\\n\", \" \", text)\n",
+    "    if \"?\" in cleaned_text:\n",
+    "        segment_list = cleaned_text.split(\"  \")\n",
+    "        for segment in segment_list:\n",
+    "            if \"?\" in segment:\n",
+    "                cleaned_text = segment\n",
+    "    return cleaned_text\n",
+    "\n",
+    "cleaning(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 4307 entries, 0 to 4306\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column           Non-Null Count  Dtype  \n",
+      "---  ------           --------------  -----  \n",
+      " 0   id               4307 non-null   object \n",
+      " 1   previous_5_turn  4264 non-null   object \n",
+      " 2   question         4307 non-null   object \n",
+      " 3   next_5_turn      4306 non-null   object \n",
+      " 4   categorie        1793 non-null   object \n",
+      " 5   annotateur       1948 non-null   object \n",
+      " 6   commentaire      5 non-null      object \n",
+      " 7   Unnamed: 7       0 non-null      float64\n",
+      " 8   Unnamed: 8       0 non-null      float64\n",
+      " 9   Unnamed: 9       2 non-null      object \n",
+      " 10  Unnamed: 10      2 non-null      object \n",
+      " 11  Unnamed: 11      2 non-null      object \n",
+      " 12  Unnamed: 12      2 non-null      object \n",
+      "dtypes: float64(2), object(11)\n",
+      "memory usage: 437.6+ KB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>previous_5_turn</th>\n",
+       "      <th>question</th>\n",
+       "      <th>processed_question</th>\n",
+       "      <th>next_5_turn</th>\n",
+       "      <th>categorie</th>\n",
+       "      <th>annotateur</th>\n",
+       "      <th>commentaire</th>\n",
+       "      <th>Unnamed: 7</th>\n",
+       "      <th>Unnamed: 8</th>\n",
+       "      <th>Unnamed: 9</th>\n",
+       "      <th>Unnamed: 10</th>\n",
+       "      <th>Unnamed: 11</th>\n",
+       "      <th>Unnamed: 12</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>#spk4 : monsieur</td>\n",
+       "      <td>#spk4 : depuis combien de temps habitez-vous O...</td>\n",
+       "      <td>#spk4 : depuis combien de temps habitez-vous O...</td>\n",
+       "      <td>#spk1 : oh ça fait neuf ans depuis dix neuf ce...</td>\n",
+       "      <td>préparé</td>\n",
+       "      <td>Valentin</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>préparé</td>\n",
+       "      <td>spontané</td>\n",
+       "      <td>non-question</td>\n",
+       "      <td>poubelle</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>#spk4 : monsieur | #spk4 : depuis combien de t...</td>\n",
+       "      <td>#spk4 : vous vous plaisez à  Orléans ?</td>\n",
+       "      <td>#spk4 : vous vous plaisez à  Orléans ?</td>\n",
+       "      <td>#spk4 : pourquoi ça ? | #spk1 : bah parce que ...</td>\n",
+       "      <td>préparé</td>\n",
+       "      <td>Valentin</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>494</td>\n",
+       "      <td>745</td>\n",
+       "      <td>292</td>\n",
+       "      <td>262</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>#spk4 : monsieur | #spk4 : depuis combien de t...</td>\n",
+       "      <td>#spk4 : pourquoi ça ?</td>\n",
+       "      <td>#spk4 : pourquoi ça ?</td>\n",
+       "      <td>#spk1 : bah parce que // j'ai // j'ai toujours...</td>\n",
+       "      <td>spontané</td>\n",
+       "      <td>Valentin</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>#spk1 : oh ça fait neuf ans depuis dix neuf ce...</td>\n",
+       "      <td>#spk4 : et est-ce que vous comptez rester à  O...</td>\n",
+       "      <td>#spk4 : et est-ce que vous comptez rester à  O...</td>\n",
+       "      <td>#spk1 : oh je suis obligé par ma profession | ...</td>\n",
+       "      <td>préparé</td>\n",
+       "      <td>Valentin</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>#spk1 : bah parce que // j'ai // j'ai toujours...</td>\n",
+       "      <td>#spk4 : et qu'est ce que vous faites comme tra...</td>\n",
+       "      <td>#spk4 : et qu'est ce que vous faites comme tra...</td>\n",
+       "      <td>#spk1 : je suis contrôleur divisionnaire aux P...</td>\n",
+       "      <td>spontané</td>\n",
+       "      <td>Valentin</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  id                                    previous_5_turn  \\\n",
+       "0  1                                   #spk4 : monsieur   \n",
+       "1  2  #spk4 : monsieur | #spk4 : depuis combien de t...   \n",
+       "2  3  #spk4 : monsieur | #spk4 : depuis combien de t...   \n",
+       "3  4  #spk1 : oh ça fait neuf ans depuis dix neuf ce...   \n",
+       "4  5  #spk1 : bah parce que // j'ai // j'ai toujours...   \n",
+       "\n",
+       "                                            question  \\\n",
+       "0  #spk4 : depuis combien de temps habitez-vous O...   \n",
+       "1             #spk4 : vous vous plaisez à  Orléans ?   \n",
+       "2                              #spk4 : pourquoi ça ?   \n",
+       "3  #spk4 : et est-ce que vous comptez rester à  O...   \n",
+       "4  #spk4 : et qu'est ce que vous faites comme tra...   \n",
+       "\n",
+       "                                  processed_question  \\\n",
+       "0  #spk4 : depuis combien de temps habitez-vous O...   \n",
+       "1             #spk4 : vous vous plaisez à  Orléans ?   \n",
+       "2                              #spk4 : pourquoi ça ?   \n",
+       "3  #spk4 : et est-ce que vous comptez rester à  O...   \n",
+       "4  #spk4 : et qu'est ce que vous faites comme tra...   \n",
+       "\n",
+       "                                         next_5_turn categorie annotateur  \\\n",
+       "0  #spk1 : oh ça fait neuf ans depuis dix neuf ce...   préparé   Valentin   \n",
+       "1  #spk4 : pourquoi ça ? | #spk1 : bah parce que ...   préparé   Valentin   \n",
+       "2  #spk1 : bah parce que // j'ai // j'ai toujours...  spontané   Valentin   \n",
+       "3  #spk1 : oh je suis obligé par ma profession | ...   préparé   Valentin   \n",
+       "4  #spk1 : je suis contrôleur divisionnaire aux P...  spontané   Valentin   \n",
+       "\n",
+       "  commentaire  Unnamed: 7  Unnamed: 8 Unnamed: 9 Unnamed: 10   Unnamed: 11  \\\n",
+       "0         NaN         NaN         NaN    préparé    spontané  non-question   \n",
+       "1         NaN         NaN         NaN        494         745           292   \n",
+       "2         NaN         NaN         NaN        NaN         NaN           NaN   \n",
+       "3         NaN         NaN         NaN        NaN         NaN           NaN   \n",
+       "4         NaN         NaN         NaN        NaN         NaN           NaN   \n",
+       "\n",
+       "  Unnamed: 12  \n",
+       "0    poubelle  \n",
+       "1         262  \n",
+       "2         NaN  \n",
+       "3         NaN  \n",
+       "4         NaN  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(\"data/all_questions.csv\")\n",
+    "df.info()\n",
+    "\n",
+    "def cleaning(text):\n",
+    "    \"\"\"This function cleans the text to remove line breaks.\"\"\"\n",
+    "    cleaned_text = re.sub(\"\\n\", \" \", text)\n",
+    "    # add this condition to keep only questions\n",
+    "    if \"?\" in cleaned_text:\n",
+    "        segment_list = cleaned_text.split(\" : \")\n",
+    "\n",
+    "    return segment_list[-1]\n",
+    "\n",
+    "question = \"qui vous a pas plu euh dans le film ?\"\n",
+    "\n",
+    "\n",
+    "# 对 \"text\" 列进行文本处理，将处理结果保存在 \"processed_text\" 列中\n",
+    "df.insert(df.columns.get_loc('question') + 1, 'processed_question', df['question'].apply(lambda x: cleaning(x)))\n",
+    "\n",
+    "\n",
+    "\n",
+    "# df.cleaned_question = cleaning(question) \n",
+    "# label = df[df.question == cleaning(question)].categorie\n",
+    "# label\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
